--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,19 +2,17 @@
     <string name="app_name">MADDemo18</string>
     <string name="welcome_message">Hello Android!</string>
     <string name="popup_message">Selected: %s</string>
-    <string name="itemDescriptionLabel">Description</string>
     <string name="itemNameLabel">Name</string>
-    <string name="hintNameEdit">Enter the name</string>
-    <string name="hintDescriptionEdit">Enter the description</string>
+    <string name="itemDescriptionLabel">Description</string>
+    <string name="itemExpiryLabel">Expiry DateTime</string>
     <string name="itemSaveButton">Save</string>
     <string name="is_done">Is this ToDo done?</string>
-    <string name="hint_done">Is it done?</string>
     <string name="favoriteLabel">Favorite</string>
     <string name="title_activity_login">Login</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Password (6-digits)</string>
     <string name="action_sign_in">Login</string>
     <string name="action_sign_in_short">Login</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -25,5 +23,8 @@
         completions."
     </string>
     <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
     <string name="dialog_warning_offline">I\'m offline :-( Continuing with local data only.</string>
+    <string name="dialog_warning_delete">Are you sure?</string>
+    <string name="btn_delete">DELETE</string>
 </resources>
