--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="itemDescriptionLabel">Description</string>
     <string name="itemExpiryLabel">Expiry</string>
     <string name="itemSaveButton">Save</string>
-    <string name="is_done">Is this ToDo done?</string>
-    <string name="favoriteLabel">Favorite</string>
+    <string name="is_done">Done?</string>
+    <string name="favoriteLabel">Favorite?</string>
     <string name="title_activity_login">Login</string>
 
     <!-- Strings related to login -->
@@ -35,4 +35,5 @@
     <string name="sort_menu_by_date_title">Sort by Date</string>
     <string name="sort_menu_by_favorite_title">Sort by Favorite</string>
     <string name="sort_menu_by_done_title">Sort by Done</string>
+    <string name="add_contacts_menu_title">Add Contacts</string>
 </resources>
