--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="dialog_warning_offline">I\'m offline :-( Starting with local data.</string>
-    <string name="dialog_warning_delete">Are you sure?</string>
+    <string name="dialog_warning_delete">Continue to delete this todo?</string>
     <string name="btn_delete">DELETE</string>
     <string name="expiryLabel">Set expiry</string>
     <string name="icon_waste_paper_basket">Waste paper basket</string>
